--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ requires = ["poetry>=1.0.0"]
 build-backend = "poetry.masonry.api"
 
 [tool.poetry.plugins.pipen]
-log2file = "pipen_poplog:poplog_plugin"
+poplog = "pipen_poplog:poplog_plugin"
 
 [tool.mypy]
 ignore_missing_imports = true
