--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,8 +9,8 @@ homepage = "https://github.com/pwwang/pipen-poplog"
 repository = "https://github.com/pwwang/pipen-poplog"
 
 [tool.poetry.dependencies]
-python = "^3.8"
-pipen = "^0.13"
+python = "^3.9"
+pipen = "^0.14"
 
 [tool.poetry.build]
 generate-setup-file = true
@@ -31,5 +31,5 @@ strict_optional = false
 
 [tool.black]
 line-length = 88
-target-version = ['py37', 'py38', 'py39', 'py310']
+target-version = ['py39', 'py310', 'py311']
 include = '\.pyi?$'
