--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,10 +10,14 @@ repository = "https://github.com/pwwang/pipen-poplog"
 
 [tool.poetry.dependencies]
 python = "^3.9"
-pipen = "^0.15.0"
+pipen = { version = "^0.16.0a1", allow-prereleases = true }
 
 [tool.poetry.build]
 generate-setup-file = true
+
+[tool.poetry.group.examples.dependencies]
+google-cloud-storage = "^3.1.0"
+python-dotenv = "^1.0.1"
 
 [build-system]
 requires = ["poetry>=1.0.0"]
@@ -31,5 +35,5 @@ strict_optional = false
 
 [tool.black]
 line-length = 88
-target-version = ['py39', 'py310', 'py311']
+target-version = ['py39', 'py310', 'py311', 'py312']
 include = '\.pyi?$'
