--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,14 +10,14 @@ repository = "https://github.com/pwwang/pipen-poplog"
 
 [tool.poetry.dependencies]
 python = "^3.9"
-pipen = "^0.16.0"
+pipen = "0.17.*"
 
 [tool.poetry.build]
 generate-setup-file = true
 
 [tool.poetry.group.examples.dependencies]
-google-cloud-storage = "^3.1.0"
-python-dotenv = "^1.0.1"
+google-cloud-storage = "^3"
+python-dotenv = "^1"
 
 [build-system]
 requires = ["poetry>=1.0.0"]
