feat: abstract log populator for reusability
- Introduced comprehensive unit tests for the LogsPopulator class covering various scenarios including initialization, file population, residue handling, and destructor behavior.
- Added development dependencies for testing and code quality tools: pytest, pytest-cov, mypy, and flake8.
- Configured pytest options for coverage reporting and warnings filtering.
- Created a tox.ini file for flake8 configuration to enforce coding standards.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,18 @@ jobs:
           python -m pip install --upgrade pip
           python -m pip install poetry
           poetry config virtualenvs.create false
-          poetry install -v
+          poetry install -v --with dev
+      - name: Lint with flake8
+        run: |
+          flake8 pipen_poplog.py
+
+      - name: Type check with mypy
+        run: |
+          mypy -p pipen_poplog
+
+      - name: Run tests with pytest
+        run: |
+          pytest
 
   deploy:
     needs: build
