--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,19 +10,19 @@ repository = "https://github.com/pwwang/pipen-poplog"
 
 [tool.poetry.dependencies]
 python = "^3.9"
-pipen = "^1.0"
+pipen = {version = "1.1.*", allow-prereleases = true}
 
 [tool.poetry.build]
 generate-setup-file = true
 
 [tool.poetry.group.examples.dependencies]
-google-cloud-storage = "^3"
+cloudsh = {version = "^0.3.5", extras = ["gcs"]}
 python-dotenv = "^1"
-
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.4.1"
 pytest-cov = "^6.2.1"
+pytest-asyncio = "^1"
 mypy = "^1.17.1"
 flake8 = "^7.3.0"
 
@@ -52,3 +52,4 @@ filterwarnings = [
 ]
 console_output_style = "progress"
 junit_family = "xunit1"
+asyncio_mode = "auto"
