--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ pytest-cov = "^6.2.1"
 pytest-asyncio = "^1"
 mypy = "^1.17.1"
 flake8 = "^7.3.0"
+backports-asyncio-runner = {version = "^1.1.0", python = "<3.11"}
 
 [build-system]
 requires = ["poetry-core"]
